Build: updates test and lib directories in cmake script.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,8 +18,8 @@ set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g -ggdb")
 set(CMAKE_CXX_FLAGS_RELEASE "-O3 -fstack-protector -s")
 set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -Wextra -Werror -pedantic")
 
-set(LIBS_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../../lib")
-set(SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../../src")
+set(LIBS_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lib")
+set(SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
 
 set(SRC_FILES ${SRC_DIR}/pugihtml.cpp ${SRC_DIR}/memory.cpp)
 
