Build: adds include directory.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,9 +20,13 @@ set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -Wextra -pedantic")
 
 set(LIBS_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lib")
 set(SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
+set(INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")
 
 file(GLOB_RECURSE SRC_FILES "${SRC_DIR}/*.cpp")
 add_library(pugihtml STATIC ${SRC_FILES})
+
+include_directories("${INCLUDE_DIR}")
+include_directories("${SRC_DIR}")
 
 
 #
@@ -34,7 +38,6 @@ if (PUGIHTML_ENABLE_TESTS)
 	set(TEST_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/test")
 	file(GLOB_RECURSE TEST_SRC_FILES "${TEST_SRC_DIR}/*.cpp")
 
-	include_directories("${SRC_DIR}")
 
 	set(GTEST_DIR "${LIBS_DIR}/gtest")
 	add_subdirectory(${GTEST_DIR})
