Build: temporary builds only node and attribute classes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,8 @@ set(LIBS_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lib")
 set(SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
 set(INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")
 
-file(GLOB_RECURSE SRC_FILES "${SRC_DIR}/*.cpp")
+#file(GLOB_RECURSE SRC_FILES "${SRC_DIR}/*.cpp")
+set(SRC_FILES "${SRC_DIR}/node.cpp" "${SRC_DIR}/attribute.cpp")
 add_library("${PROJECT_LIB}" STATIC ${SRC_FILES})
 
 include_directories("${INCLUDE_DIR}")
@@ -36,7 +37,8 @@ include_directories("${SRC_DIR}")
 if (PUGIHTML_ENABLE_TESTS)
 
 	set(TEST_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/test")
-	file(GLOB_RECURSE TEST_SRC_FILES "${TEST_SRC_DIR}/*.cpp")
+	#file(GLOB_RECURSE TEST_SRC_FILES "${TEST_SRC_DIR}/*.cpp")
+	set(TEST_SRC_FILES "${TEST_SRC_DIR}/node_test.cpp")
 
 
 	set(GTEST_DIR "${LIBS_DIR}/gtest")
