Build: adds parser.cpp to source file list.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ set(INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")
 
 #file(GLOB_RECURSE SRC_FILES "${SRC_DIR}/*.cpp")
 set(SRC_FILES "${SRC_DIR}/node.cpp" "${SRC_DIR}/attribute.cpp"
-	"${SRC_DIR}/document.cpp")
+	"${SRC_DIR}/document.cpp" "${SRC_DIR}/parser.cpp")
 add_library("${PROJECT_LIB}" STATIC ${SRC_FILES})
 
 include_directories("${INCLUDE_DIR}")
