Build: includes parser tests.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,7 +40,8 @@ if (PUGIHTML_ENABLE_TESTS)
 	set(TEST_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/test")
 	#file(GLOB_RECURSE TEST_SRC_FILES "${TEST_SRC_DIR}/*.cpp")
 	set(TEST_SRC_FILES "${TEST_SRC_DIR}/node_test.cpp"
-		"${TEST_SRC_DIR}/document_test.cpp")
+		"${TEST_SRC_DIR}/document_test.cpp"
+		"${TEST_SRC_DIR}/parser_test.cpp")
 
 
 	set(GTEST_DIR "${LIBS_DIR}/gtest")
