--- a/scripts/pugihtml_codeblocks.cbp
+++ b/scripts/pugihtml_codeblocks.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="pugihtml" />
+		<Option title="cpp-html" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="codeblocks/libpugihtml_d.a" prefix_auto="0" extension_auto="0" />
+				<Option output="codeblocks/libcpp-html_d.a" prefix_auto="0" extension_auto="0" />
 				<Option object_output="codeblocks/Debug" />
 				<Option type="2" />
 				<Option compiler="gcc" />
@@ -19,7 +19,7 @@
 				</Linker>
 			</Target>
 			<Target title="Release">
-				<Option output="codeblocks/libpugihtml.a" prefix_auto="0" extension_auto="0" />
+				<Option output="codeblocks/libcpp-html.a" prefix_auto="0" extension_auto="0" />
 				<Option object_output="codeblocks/Release" />
 				<Option type="2" />
 				<Option compiler="gcc" />
@@ -32,11 +32,11 @@
 				</Linker>
 			</Target>
 		</Build>
-		<Unit filename="../src/pugihtml.hpp">
+		<Unit filename="../src/cpp-html.hpp">
 		</Unit>
 		<Unit filename="../src/pugiconfig.hpp">
 		</Unit>
-		<Unit filename="../src/pugihtml.cpp">
+		<Unit filename="../src/cpp-html.cpp">
 		</Unit>
 		<Extensions />
 	</Project>
