--- a/scripts/pugihtml_codelite.project
+++ b/scripts/pugihtml_codelite.project
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<CodeLite_Project Name="pugihtml">
+<CodeLite_Project Name="cpp-html">
   <VirtualDirectory Name="src">
-    <File Name="../src/pugihtml.hpp"/>
+    <File Name="../src/cpp-html.hpp"/>
     <File Name="../src/pugiconfig.hpp"/>
-    <File Name="../src/pugihtml.cpp"/>
+    <File Name="../src/cpp-html.cpp"/>
   </VirtualDirectory>
   <Settings Type="Static Library">
     <Configuration Name="Debug" CompilerType="gnu g++" DebuggerType="GNU gdb debugger" Type="Static Library">
-      <General OutputFile="codelite/libpugihtml_d.a" IntermediateDirectory="codelite/Debug" Command="./libpugihtml_d.a" CommandArguments="" WorkingDirectory="codelite" PauseExecWhenProcTerminates="yes"/>
+      <General OutputFile="codelite/libcpp-html_d.a" IntermediateDirectory="codelite/Debug" Command="./libcpp-html_d.a" CommandArguments="" WorkingDirectory="codelite" PauseExecWhenProcTerminates="yes"/>
       <Compiler Required="yes" Options="-g">
         <Preprocessor Value="_DEBUG"/>
       </Compiler>
@@ -28,7 +28,7 @@
       </AdditionalRules>
     </Configuration>
     <Configuration Name="Release" CompilerType="gnu g++" DebuggerType="GNU gdb debugger" Type="Static Library">
-      <General OutputFile="codelite/libpugihtml.a" IntermediateDirectory="codelite/Release" Command="./libpugihtml.a" CommandArguments="" WorkingDirectory="codelite" PauseExecWhenProcTerminates="yes"/>
+      <General OutputFile="codelite/libcpp-html.a" IntermediateDirectory="codelite/Release" Command="./libcpp-html.a" CommandArguments="" WorkingDirectory="codelite" PauseExecWhenProcTerminates="yes"/>
       <Compiler Required="yes" Options="-O2">
         <Preprocessor Value="NDEBUG"/>
       </Compiler>
