--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/gtest"]
 	path = lib/gtest
 	url = https://github.com/voormedia/google-test.git
+[submodule "test/lib/gmock"]
+	path = test/lib/gmock
+	url = https://github.com/povilasb/gmock.git
