Added TEST_FIXTURE_DIR definition. Fixed test source files search pattern. Linked cpp-html library to tests.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 2.6)
 
 
 set(test_src_dir "${CMAKE_CURRENT_SOURCE_DIR}/src")
-file(GLOB_RECURSE test_src_files ${test_src_dir})
+file(GLOB_RECURSE test_src_files ${test_src_dir}/*_test.cpp)
 
 
 set(gmock_dir "${CMAKE_CURRENT_SOURCE_DIR}/lib/gmock")
@@ -11,8 +11,10 @@ add_subdirectory("${gmock_dir}" "${CMAKE_CURRENT_BINARY_DIR}/lib/gmock")
 include_directories("${gtest_dir}/include")
 include_directories("${gmock_dir}/include")
 
+add_definitions(-DTEST_FIXTURE_DIR="${CMAKE_CURRENT_SOURCE_DIR}/fixture")
 
-set(all_libraries gmock_main gmock gtest)
+
+set(all_libraries gmock_main gmock gtest ${lib_cpp_html})
 
 
 add_custom_target(run-tests COMMAND "")
